--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,15 +1,10 @@
 <div class="component">
-    <h3>Moving down the cliffs and rocks toward the sea</h3>
-    <article>
-        The first rainfall of the wet season on Australia’s Christmas Island has begun, 
-        which means one thing is certain: Millions of bright red crabs are on the move 
-        once again to mate and spawn — shutting down roads and “turning up everywhere,” 
-        in the words of a local conservation agency.
-    </article>
+    <h3>{{ data.title }}</h3>
+    <article>{{ data.description }}</article>
     <button
-       [ngStyle]="{'background-color': colorItem}"
-       (click)="changeColor(colorItem)"
+       [ngStyle]="{'background-color': data.color}"
+       (click)="changeColor()"
     >
-        Set {{ colorItem }}
+        Set {{ data.color }}
     </button>
 </div>
